# Projet-annuel

./: Nomenclature de l'arborescence.txt  Nomenclature de l'arborescene.txt  OKGNS.gns3project  README.md  testExport.gns3project
Docs/: Règles du groupe.txt
Docs/CCF/: Partie1Et2_CCF_20190227_V1.txt
Docs/CG/: Conception_CG_20190307_V2.docx
Gestion/Doc/Interne/: Charte Graphique Projet.docx  Charte graphique.docx  Liste des fonctionnalités.docx
Prod/Apps/: CScan_WS_20190225_V1.code-workspace  C_ScanWorkspace.code-workspace
Prod/Apps/AutoTool/: cscan-1.0.tar.bz2
Prod/Apps/AutoTool/CScan/: CScan.code-workspace  CScan.desktop  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  configure.ac~  libtool
Prod/Apps/AutoTool/CScan/autom4te.cache/: output.0  output.1  output.10  output.11  output.12  output.3  output.6  output.7  output.8  output.9  requests  traces.0  traces.1  traces.10  traces.11  traces.12  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
Prod/Apps/AutoTool/CScan/ca/: Makefile  Makefile.in
Prod/Apps/AutoTool/CScan/css/: Makefile  Makefile.in
Prod/Apps/AutoTool/CScan/glade/: Makefile  Makefile.in  listElement.glade  mainWindow.glade
Prod/Apps/AutoTool/CScan/json/: Makefile  Makefile.in  fileIndex.json  gtk.json
Prod/Apps/AutoTool/CScan/logs/: Makefile  Makefile.am  Makefile.in
Prod/Apps/AutoTool/CScan/po/: .intltool-merge-cache  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  fr.gmo  fr.po  fr.pot
Prod/Apps/AutoTool/CScan/src/: CScan  Makefile  Makefile.am  Makefile.in  bluetoothHandler.c  bluetoothHandler.h  convertCharHandler.c  convertCharHandler.h  curlHandler.c  curlHandler.h  fileHandler.c  fileHandler.h  gtkCallbacks.c  gtkCallbacks.h  gtkHandler.c  jsonHandler.c  jsonHandler.h  jsonReader.c  jsonReader.h  jsonWriter.c  jsonWriter.h  main.c  main1.c
Prod/Apps/AutoTool/CScan/src/.deps/: CScan-bluetoothHandler.Po  CScan-convertCharHandler.Po  CScan-curlHandler.Po  CScan-fileHandler.Po  CScan-gtkCallbacks.Po  CScan-gtkHandler.Po  CScan-jsonHandler.Po  CScan-jsonReader.Po  CScan-jsonWriter.Po  CScan-main.Po
Prod/Apps/CMake/CScan/: 512.rnd  CMakeLists.txt  CScan.code-workspace  Makefile  config.h  config.status  configure  configure.ac
Prod/Apps/CMake/CScan/autom4te.cache/: output.4  output.5  output.8  traces.0  traces.2  traces.3  traces.4  traces.5  traces.6  traces.8  traces.9
Prod/Apps/CMake/CScan/ca/: Makefile  Makefile.am
Prod/Apps/CMake/CScan/css/: Makefile.am  gtkStyleSheet.css
Prod/Apps/CMake/CScan/glade/: Makefile  Makefile.am  main.glade  mainWindow.glade
Prod/Apps/CMake/CScan/gmo/: en.gmo
Prod/Apps/CMake/CScan/include/: bluetoothHandler.h  curlHandler.h  gtkHandler.h  jsonHandler.h  jsonReader.h  jsonWriter.h
Prod/Apps/CMake/CScan/json/: Makefile.am  curl.json  fileIndex.json  gtk.json  tmp.json
Prod/Apps/CMake/CScan/logs/: Makefile  error.txt
Prod/Apps/CMake/CScan/po/: LINGUAS  Makefile  Makefile.am  en.mo  en.po  fr.po  loginForm.glade
Prod/Apps/CMake/CScan/src/: Makefile.am  Makefile.in  bluetoothHandler.c  convertCharHandler.h  curlHandler.c  jsonHandler.c  jsonReader.c  jsonWriter.c  main.c
Prod/Apps/CMake/CScan/src/.deps/: CScan-bluetoothHandler.Po  CScan-curlHandler.Po  CScan-fileHandler.Po  CScan-gtkHandler.Po  CScan-jsonHandler.Po
Prod/Apps/CMake/CScan/src/.libs/: CScan_ltshwrapper  lt-CScan.c
Prod/Apps/CScan/: CMakeLists.txt  makefile
Prod/Apps/CScan/Arduino/Bluetooth_Test_20190303_V1/: Bluetooth_Test_20190303_V1.ino
Prod/Apps/CScan/glade/: window_main.glade
Prod/Apps/CScan/include/: curlHandler.h  fileHandler.h  jsonHandler.h  jsonReader.h  jsonWriter.h  wCharHandler.h
Prod/Apps/CScan/json/: curl.json  fileIndex.json  url.json
Prod/Apps/CScan/src/: curlHandler.c  fileHandler.c  jsonHandler.c  jsonReader.c  jsonWriter.c  main.c
Prod/Apps/C_Scan/: makefile
Prod/Apps/C_Scan/src/: main.c
Prod/Apps/FFW App Mobile/: gradle.properties
Prod/Apps/FFW App Mobile/app/: build.gradle
Prod/Apps/FFW App Mobile/app/release/: app-release.apk
Prod/Apps/FFW App Mobile/app/src/main/: AndroidManifest.xml
Prod/Apps/FFW App Mobile/app/src/main/res/drawable/: border.xml  icone_expand_less_24dp.xml  icone_expand_more_24dp.xml  icone_favorite_24dp.xml  icone_favorite_border_24dp.xml  icone_thumb_down_24dp.xml  icone_thumb_up_24dp.xml  side_nav_bar.xml
Prod/Apps/FFW App Mobile/app/src/main/res/layout/: activity_connection.xml  activity_drawer_menu.xml  activity_inscription.xml  activity_main.xml  alert_dialog_change_pwd.xml  app_bar_drawer_menu.xml  fragment_forum.xml  fragment_forum_header_list.xml  fragment_news.xml  fragment_news_header_list.xml  fragment_profil.xml  fragment_services.xml  (+5 more)
Prod/Apps/FFW App Mobile/gradle/wrapper/: gradle-wrapper.properties
Prod/Apps/Scanner/: arduino.txt
Prod/Apps/Scanner/monPrg/: monPrg.ino
Prod/Apps/Scanner/testShield/: testShield.ino
Prod/Apps/Scanner/testUSBPORT/: testUSBPORT.ino
Prod/Apps/Scanner/testbluetooth/: testbluetooth.ino
Prod/Infra/Réseau/Plan d'adressage/: PlanAdressage_VLSM_20190225_V1.xlsx  VLSM.xlsx  ~$VLSM.xlsx
Prod/Infra/Réseau/Topologie/: Commandes Router.txt  OperatorRouter_Conf_20190225_V1  ParisRouter_Conf_20190225_V1  Réseau_Topo_20190307_V2.gns3project  Réseau_Topo_20190316_V3.gns3project  Switch_Com_20190225_V1.txt  Topologie_2019-25-02.gns3project  config Router_Operator  config Router_P1
Prod/Infra/Serv/Database/: Database_Model_20190323_V1.mwb
Rendu étape 2/: AppliC_Fonctionnalités_20190310_V1.docx  Conception_CF_20190313_V1.docx  SiteWeb_Fonctionnalités_20190312_V2.docx  ~$nception_CF_20190313_V1.docx
Rendu étape 2/Application C test API Open Food Facts/: CMakeLists.txt
Rendu étape 2/Application C test API Open Food Facts/include/: curlHandler.h  fileHandler.h  jsonHandler.h
Rendu étape 2/Application C test API Open Food Facts/json/: curl.json  fileIndex.json
Rendu étape 2/Application C test API Open Food Facts/src/: curlHandler.c  fileHandler.c  jsonHandler.c  jsonReader.c  jsonWriter.c  main.c  wcharHandler.c
(+23 files in other folders)
